--- a/src/main/resources/templates/user_publish_history.html
+++ b/src/main/resources/templates/user_publish_history.html
@@ -407,19 +407,14 @@
                                         </select>
                                     </div>
                                     <!-- 這是一個隱藏欄位 -->
-                                    <div class="d-flex" style="visibility: hidden;">
+                                    <div class="d-flex" style="display: none !important;">
                                         <span>會員編號</span>
                                         <span id="userId_personal"></span>
                                     </div>
                                     <!-- 這是一個隱藏欄位 -->
-                                    <div class="d-flex" style="visibility: hidden;">
+                                    <div class="d-flex" style="display: none !important;">
                                         <span>動物編號</span>
                                         <span id="animalId_personal"></span>
-                                    </div>
-                                    <!-- 這是一個保留欄位 -->
-                                    <div class="d-flex" style="visibility: hidden;">
-                                        <span>dummy</span>
-                                        <span id="">dummy</span>
                                     </div>
                                 </div>
                                 <!-- 備註(寵物描述) -->
@@ -476,7 +471,7 @@
                                         <input type="file" id="animalPhoto_missing">
                                     </div>
                                 </div>
-                                <div class="col-4 mt-0">
+                                <div class="col-6 mt-0">
                                     <div class="d-flex">
                                         <span>物種</span>
                                         <select id="animalKind_missing" class="custom-select" type="text"
@@ -514,7 +509,7 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div class="col-4 mt-0">
+                                <div class="col-6 mt-0">
                                     <div class="d-flex">
                                         <span>體型</span>
                                         <select id="animalBodysize_missing" class="custom-select" type="text"
@@ -557,32 +552,15 @@
                                             <option value="連江縣">連江縣</option>
                                         </select>
                                     </div>
-                                    <!-- 這是一個保留欄位 -->
-                                    <div class="d-flex" style="visibility: hidden;">
-                                        <span>dummy</span>
-                                        <span id="">dummy</span>
-                                    </div>
-                                </div>
-                                <div class="col-4 mt-0">
                                     <!-- 這是一個隱藏欄位 -->
-                                    <div class="d-flex" style="visibility: hidden;">
+                                    <div class="d-flex" style="display: none !important;">
                                         <span>會員編號</span>
                                         <span id="userId_missing"></span>
                                     </div>
                                     <!-- 這是一個隱藏欄位 -->
-                                    <div class="d-flex" style="visibility: hidden;">
+                                    <div class="d-flex" style="display: none !important;">
                                         <span>動物編號</span>
                                         <span id="animalId_missing"></span>
-                                    </div>
-                                    <!-- 這是一個保留欄位 -->
-                                    <div class="d-flex" style="visibility: hidden;">
-                                        <span>dummy</span>
-                                        <span id="">dummy</span>
-                                    </div>
-                                    <!-- 這是一個保留欄位 -->
-                                    <div class="d-flex" style="visibility: hidden;">
-                                        <span>dummy</span>
-                                        <span id="">dummy</span>
                                     </div>
                                 </div>
                                 <!-- 備註(寵物描述) -->
