--- a/src/main/resources/templates/animal_missing.html
+++ b/src/main/resources/templates/animal_missing.html
@@ -143,6 +143,7 @@
                         </div>
                         <!-- 標題定位用右區塊 -->
                         <div class="col-4 px-0">
+                            <!-- 日期排版於右上角的舊樣式
                             <div class="row m-0 pr-4 font-weight-bold justify-content-end">
                                 <span id="createdDate_static"></span>
                                 <span>&nbsp;刊登日期</span>
@@ -151,6 +152,8 @@
                                 <span id="missingDate_static"></span>
                                 <span>&nbsp;走失日期</span>
                             </div>
+                            -->
+
                             <!-- 強制定位關閉功能於最右上角 -->
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"
                                     style="position: absolute !important; top: 0; right: 0; padding: 10px !important;">
@@ -159,8 +162,7 @@
                         </div>
                     </div>
                     <!-- 設定上下邊線效果 區隔 header 和 footer -->
-                    <div class="modal-body"
-                         style="border-top: 3px dotted grey; border-bottom: 3px dotted grey;">
+                    <div class="modal-body" style="border-top: 3px dotted grey; border-bottom: 3px dotted grey;">
                         <div class="row m-auto col-12 justify-content-center">
                             <div class="col-xl-6 col-12">
                                 <!-- 彈出框圖片高度於小畫面顯示異常 強制設定600px高 -->
@@ -169,15 +171,19 @@
                                 </div>
                             </div>
                             <div class="row mx-0 col-xl-6 col-12" style="height: 100% !important;">
-                                <div class="col-4 mt-0">
-                                    <div class="d-block">
-                                        <span>會員編號 :</span>
-                                        <span id="userId_static"></span>
+                                <div class="col-6 my-1" style="border-bottom: 1px dotted grey">
+                                    <div class="d-flex justify-content-start">
+                                        <span class="font-weight-bold">刊登日期 :</span>
+                                        <span class="font-weight-bold" id="createdDate_static"></span>
                                     </div>
-                                    <div class="d-block">
-                                        <span>動物編號 :</span>
-                                        <span id="animalId_static"></span>
+                                </div>
+                                <div class="col-6 my-1" style="border-bottom: 1px dotted grey">
+                                    <div class="d-flex justify-content-end">
+                                        <span class="font-weight-bold">走失日期 :</span>
+                                        <span class="font-weight-bold" id="missingDate_static"></span>
                                     </div>
+                                </div>
+                                <div class="col-6 mt-0">
                                     <div class="d-block">
                                         <span>物種 :</span>
                                         <span id="kind_static"></span>
@@ -186,8 +192,6 @@
                                         <span>品種 :</span>
                                         <span id="variety_static"></span>
                                     </div>
-                                </div>
-                                <div class="col-4 mt-0">
                                     <div class="d-block">
                                         <span>性別 :</span>
                                         <span id="sex_static"></span>
@@ -196,6 +200,8 @@
                                         <span>年齡 :</span>
                                         <span id="age_static"></span>
                                     </div>
+                                </div>
+                                <div class="col-6 mt-0">
                                     <div class="d-block">
                                         <span>體型 :</span>
                                         <span id="bodysize_static"></span>
@@ -204,16 +210,21 @@
                                         <span>毛色 :</span>
                                         <span id="color_static"></span>
                                     </div>
-                                </div>
-                                <div class="col-4 mt-0">
                                     <div class="d-block">
                                         <span>地區 :</span>
                                         <span id="area_static"></span>
                                     </div>
-                                    <!-- 這是一個保留欄位 -->
-                                    <div class="d-block" style="visibility: hidden;">
-                                        <span>dummy</span>
-                                        <span id="">dummy</span>
+                                </div>
+                                <div class="col-12 mt-0">
+                                    <!-- 這是一個隱藏欄位 -->
+                                    <div class="d-flex" style="display: none !important;">
+                                        <span>會員編號 :</span>
+                                        <span id="userId_static"></span>
+                                    </div>
+                                    <!-- 這是一個隱藏欄位 -->
+                                    <div class="d-flex" style="display: none !important;">
+                                        <span>動物編號 :</span>
+                                        <span id="animalId_static"></span>
                                     </div>
                                 </div>
                                 <!-- 備註(寵物描述) -->
@@ -226,7 +237,29 @@
                         </div>
                     </div>
                     <div class="modal-footer justify-content-center">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">關閉</button>
+                        <div class="row mx-0 my-2 col-12 justify-content-center">
+                            <div class="col-xl-6 col-12">
+                                <div class="row m-auto justify-content-center">
+                                        <span class="py-1 px-1" style="color: red;"><i
+                                                class="fa fa-user fa-2x"></i></span>
+                                    <span class="font-weight-bold" style="font-size: 20px;">聯絡人：</span>
+                                    <span class="font-weight-bold" style="font-size: 20px;"
+                                          id="userName_static"></span>
+                                    <span class="font-weight-bold" style="font-size: 20px;"
+                                          id="userGender_static"></span>
+                                </div>
+                            </div>
+                            <div class="col-xl-6 col-12">
+                                <div class="row m-auto justify-content-center">
+                                        <span class="py-1 px-1" style="color: red;"><i
+                                                class="fa fa-phone fa-2x"></i></span>
+                                    <span class="font-weight-bold" style="font-size: 20px;">電話：</span>
+                                    <span class="font-weight-bold" style="font-size: 20px;"
+                                          id="userTel_static"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <!--                        <button type="button" class="btn btn-primary" data-dismiss="modal">關閉</button>-->
                     </div>
                 </div>
             </div>
@@ -354,7 +387,9 @@
         $.getScript('js/main.js');
     }
 
-    function getAnimalMissingInfo(gid) {//點擊詳細資料按紐
+    // 點擊詳細資料按鈕
+
+    function getAnimalMissingInfo(gid) {
 
         var id = $(gid).siblings("h3").attr("id");
         console.log(gid);
@@ -378,6 +413,24 @@
                 $("#area_static").text(data.area);
                 $("#missingDate_static").text(data.missingDate);
                 $("#createdDate_static").text(data.createdDate);
+
+                // 取得聯絡人資料
+                getAnimalMissingContact();
+            }
+        });
+    }
+
+    // 點擊詳細資料按鈕後取得聯絡人資料
+    function getAnimalMissingContact() {
+        userId = $("#userId_static").text();
+
+        $.ajax({
+            type: "GET",
+            url: "/user/" + userId,
+            success: function (data) {
+                $("#userName_static").text(data.name);
+                $("#userGender_static").text(data.gender == "男" ? " 先生" : "女士");
+                $("#userTel_static").text(data.tel);
             }
         });
     }
