跑馬燈恢復隨機輪播

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -362,9 +362,9 @@
     // 輪播系統設定
     $(".animal-header").owlCarousel({
         // 輪播開始位置設為隨機 數字為項目總數量
-        // startPosition: Math.floor(Math.random() * 9),
-        startPosition: 0,
-        // autoplay: true, // 自動輪播
+        startPosition: Math.floor(Math.random() * 9),
+        // startPosition: 0,
+        autoplay: true, // 自動輪播
         loop: true, // 循環輪播
         margin: 10, // 外距 10px
         nav: true, // 顯示前後項箭頭
