--- a/src/main/resources/templates/user_publish_history.html
+++ b/src/main/resources/templates/user_publish_history.html
@@ -307,7 +307,7 @@
                                         <input type="file" id="animalPhoto_personal">
                                     </div>
                                 </div>
-                                <div class="col-4 mt-0">
+                                <div class="col-lg-4 col-md-12 mt-0">
                                     <div class="d-flex">
                                         <span>物種</span>
                                         <select id="animalKind_personal" class="custom-select" type="text"
@@ -345,7 +345,7 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div class="col-4 mt-0">
+                                <div class="col-lg-4 col-md-12 mt-0">
                                     <div class="d-flex">
                                         <span>體型</span>
                                         <select id="animalBodysize_personal" class="custom-select" type="text"
@@ -377,7 +377,7 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div class="col-4 mt-0">
+                                <div class="col-lg-4 col-md-12 mt-0">
                                     <div class="d-flex">
                                         <span>地區</span>
                                         <select id="area_personal" class="custom-select" type="text"
@@ -471,7 +471,7 @@
                                         <input type="file" id="animalPhoto_missing">
                                     </div>
                                 </div>
-                                <div class="col-6 mt-0">
+                                <div class="col-sm-6 col-xs-12 mt-0">
                                     <div class="d-flex">
                                         <span>物種</span>
                                         <select id="animalKind_missing" class="custom-select" type="text"
@@ -509,7 +509,7 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div class="col-6 mt-0">
+                                <div class="col-sm-6 col-xs-12 mt-0">
                                     <div class="d-flex">
                                         <span>體型</span>
                                         <select id="animalBodysize_missing" class="custom-select" type="text"
