--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -134,29 +134,11 @@
                 <div class="modal-content modal-bg">
                     <!-- 寵物名字放在標題 -->
                     <div class="modal-header">
-                        <!-- 標題定位用左區塊 -->
-                        <div class="col-4 px-0">
-                        </div>
                         <!-- 標題定位用主區塊 -->
-                        <div class="col-4 px-0 d-flex justify-content-center">
+                        <div class="row m-auto col-12 px-0 justify-content-center">
                             <span class="py-1 px-1" style="color: orange;"><i class="fa fa-paw fa-2x"></i></span>
                             <h3 class="modal-title font-weight-bold" id="animalName_static">這裡是寵物名字</h3>
                             <span class="py-1 px-1" style="color: orange;"><i class="fa fa-paw fa-2x"></i></span>
-                        </div>
-                        <!-- 標題定位用右區塊 -->
-                        <div class="col-4 px-0">
-                            <!-- 日期排版於右上角的舊樣式
-                            <div class="row m-0 pr-4 font-weight-bold justify-content-end">
-                                <span id="createdDate_static"></span>
-                                <span>&nbsp;刊登</span>
-                            </div>
-                            <div class="row m-0 pr-4 font-weight-bold justify-content-end">
-                                <span id="lastModifiedDate_static"></span>
-                                <span>&nbsp;更新</span>
-                            </div>
-                            -->
-
-                            <!-- 強制定位關閉功能於最右上角 -->
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"
                                     style="position: absolute !important; top: 0; right: 0; padding: 10px !important;">
                                 <span aria-hidden="true">&times;</span>
@@ -173,19 +155,20 @@
                                 </div>
                             </div>
                             <div class="row mx-0 col-xl-6 col-12" style="height: 100% !important;">
-                                <div class="col-6 my-1" style="border-bottom: 1px dotted grey">
-                                    <div class="d-flex justify-content-start">
+                                <div class="col-sm-6 col-xs-12 my-1">
+                                    <div class="row m-auto justify-content-start">
                                         <span class="font-weight-bold">刊登日期 :</span>
                                         <span class="font-weight-bold" id="createdDate_static"></span>
                                     </div>
                                 </div>
-                                <div class="col-6 my-1" style="border-bottom: 1px dotted grey">
-                                    <div class="d-flex justify-content-end">
+                                <div class="col-sm-6 col-xs-12 my-1">
+                                    <div class="row m-auto justify-content-start">
                                         <span class="font-weight-bold">更新日期 :</span>
                                         <span class="font-weight-bold" id="lastModifiedDate_static"></span>
                                     </div>
                                 </div>
-                                <div class="col-4 mt-0">
+                                <hr class="m-0" style="width: 100%;">
+                                <div class="col-sm-4 col-xs-12 mt-0">
                                     <div class="d-block">
                                         <span>物種 :</span>
                                         <span id="animalKind_static"></span>
@@ -199,7 +182,7 @@
                                         <span id="animalSex_static"></span>
                                     </div>
                                 </div>
-                                <div class="col-4 mt-0">
+                                <div class="col-sm-4 col-xs-12 mt-0">
                                     <div class="d-block">
                                         <span>年齡 :</span>
                                         <span id="animalAge_static"></span>
@@ -213,7 +196,7 @@
                                         <span id="animalColor_static"></span>
                                     </div>
                                 </div>
-                                <div class="col-4 mt-0">
+                                <div class="col-sm-4 col-xs-12 mt-0">
                                     <div class="d-block">
                                         <span>絕育 :</span>
                                         <span id="animalSterilization_static"></span>
