--- a/src/main/resources/templates/forum.html
+++ b/src/main/resources/templates/forum.html
@@ -37,6 +37,41 @@
             opacity: 1;
         }
 
+        /*刪除按鈕樣式-滑鼠掠過*/
+        .btn.btn-del:hover {
+            color: white !important;
+            background: red !important;
+            outline: 1px solid;
+            opacity: 1;
+        }
+
+        /*取消按鈕樣式-滑鼠掠過*/
+        .btn.btn-cancel:hover {
+            color: white !important;
+            background: grey !important;
+            outline: 1px solid;
+            opacity: 1;
+        }
+
+        /*發文按鈕樣式*/
+        .btn.btn-post {
+            color: black !important;
+            padding: 6px 20px;
+            font-size: 1rem;
+            letter-spacing: 1px;
+            border: transparent !important;
+            background: #6ac3eb !important;
+            opacity: 1;
+        }
+
+        /*發文按鈕樣式-滑鼠掠過*/
+        .btn.btn-post:hover {
+            color: white !important;
+            background: #81a5ff !important;
+            outline: 1px solid;
+            opacity: 1;
+        }
+
         /*表格欄位間距*/
         th {
             padding: 15px !important;
@@ -237,7 +272,9 @@
             </div>
             <!-- 發文按鈕 -->
             <div class="p-1">
-                <button id="postFormBtn" class="btn btn-primary" onclick="postFormInit()">發文</button>
+                <button id="postFormBtn" class="btn btn-post" onclick="postFormInit()">
+                    <i class="fa fa-pencil" aria-hidden="true"></i>發文
+                </button>
             </div>
         </div>
         <!-- 顯示資料內容 -->
@@ -321,11 +358,11 @@
                                             style="display: none;">
                                         保存
                                     </button>
-                                    <button id="cancelButton" class="btn btn-primary ftco-animate"
+                                    <button id="cancelButton" class="btn btn-primary btn-cancel ftco-animate"
                                             style="display: none;">取消
                                     </button>
                                     <button id="deleteButton" articleId=""
-                                            class="btn btn-primary ftco-animate">刪除</button>
+                                            class="btn btn-primary btn-del ftco-animate">刪除</button>
                                 </span>
                             </div>
                         </div>
@@ -340,7 +377,7 @@
                                 <button id="saveMsgBtn" class="btn btn-primary ftco-animate" onclick="saveMsg()"
                                         style="display: none;">保存
                                 </button>
-                                <button id="cancelMsgBtn" class="btn btn-primary ftco-animate" onclick="cancelMsg()"
+                                <button id="cancelMsgBtn" class="btn btn-primary btn-cancel ftco-animate" onclick="cancelMsg()"
                                         style="display: none;">取消
                             </button>
                             </span>
