--- a/src/main/resources/templates/user_publish_history.html
+++ b/src/main/resources/templates/user_publish_history.html
@@ -37,17 +37,6 @@
             opacity: 1;
         }
 
-        /*刪除按鈕樣式*/
-        .btn.btn-del {
-            color: black !important;
-            padding: 6px 20px;
-            font-size: 1rem;
-            letter-spacing: 1px;
-            border: transparent !important;
-            background: #fcd601 !important;
-            opacity: 1;
-        }
-
         /*刪除按鈕樣式-滑鼠掠過*/
         .btn.btn-del:hover {
             color: white !important;
@@ -642,8 +631,8 @@
                         <td>${item.createdDate}</td>
                         <td>${item.lastModifiedDate}</td>
                         <td>
-                            <button id="personalModifyBtn" animalId="${item.animalId}" class="btn btn-primary" onclick="personalModify(this)" data-toggle="modal" data-target="#personalModalCenter">修改</button>
-                            <button id="personalDelBtn" animalId="${item.animalId}" class="btn btn-del" onclick="personalDel(this)">刪除</button>
+                            <button id="personalModifyBtn" animalId="${item.animalId}" class="my-1 btn btn-primary" onclick="personalModify(this)" data-toggle="modal" data-target="#personalModalCenter">修改</button>
+                            <button id="personalDelBtn" animalId="${item.animalId}" class="my-1 btn btn-primary btn-del" onclick="personalDel(this)">刪除</button>
                         </td>
                     </tr>
                 `;
@@ -782,8 +771,8 @@
                         <td>${item.createdDate}</td>
                         <td>${item.missingDate}</td>
                         <td>
-                            <button id="missingModifyBtn" animalId="${item.animalId}" class="btn btn-primary" onclick="missingModify(this)" data-toggle="modal" data-target="#missingModalCenter">修改</button>
-                            <button id="missingDelBtn" animalId="${item.animalId}" class="btn btn-del" onclick="missingDel(this)">刪除</button>
+                            <button id="missingModifyBtn" animalId="${item.animalId}" class="my-1 btn btn-primary" onclick="missingModify(this)" data-toggle="modal" data-target="#missingModalCenter">修改</button>
+                            <button id="missingDelBtn" animalId="${item.animalId}" class="my-1 btn btn-primary btn-del" onclick="missingDel(this)">刪除</button>
                         </td>
                     </tr>
                 `;
