--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -146,10 +146,10 @@
                     <div class="col-md-12">
                         <div class="form-group d-flex">
                             <select id="createLigation" class="form-control">
-                                <option value="default" selected="selected">結紮</option>
-                                <option value="已結紮">已結紮</option>
+                                <option value="default" selected="selected">是否結紮</option>
                                 <option value="未結紮">未結紮</option>
-                                <option value="未知">未知</option>
+                                <option value="已結紮">已結紮</option>
+                                <option value="不確定">不確定</option>
                             </select>
                         </div>
                     </div>
