--- a/src/main/resources/templates/user_publish_history.html
+++ b/src/main/resources/templates/user_publish_history.html
@@ -360,10 +360,8 @@
                                     </div>
                                     <div class="d-flex">
                                         <span>疫苗</span>
-                                        <select id="animalBacterin_personal" class="custom-select" type="text"
-                                                style="height: 40px !important;">
-                                            <option value="無資料">無資料</option>
-                                        </select>
+                                        <input id="animalBacterin_personal" class="form-control" type="text"
+                                               style="height: 40px !important;">
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-md-12 mt-0">
@@ -659,7 +657,6 @@
         $("#animalAge_personal option").removeAttr("selected");
         $("#animalBodysize_personal option").removeAttr("selected");
         $("#animalSterilization_personal option").removeAttr("selected");
-        $("#animalBacterin_personal option").removeAttr("selected");
         $("#area_personal option").removeAttr("selected");
 
         // 取得更新按鈕上的 animalId
@@ -681,14 +678,13 @@
                 $(`#animalBodysize_personal option[value='${data.animalBodysize}']`).attr("selected", "selected");
                 $("#animalSterilization_personal").val(`${data.animalSterilization}`).change();
                 $(`#animalSterilization_personal option[value='${data.animalSterilization}']`).attr("selected", "selected");
-                $("#animalBacterin_personal").val(`${data.animalBacterin}`).change();
-                $(`#animalBacterin_personal option[value='${data.animalBacterin}']`).attr("selected", "selected");
                 $("#area_personal").val(`${data.area}`).change();
                 $(`#area_personal option[value='${data.area}']`).attr("selected", "selected");
 
                 $("#animalName_personal").text(data.animalName);
                 $("#animalVariety_personal").val(data.animalVariety);
                 $("#animalColor_personal").val(data.animalColor);
+                $("#animalBacterin_personal").val(data.animalBacterin);
                 $("#description_personal").html(data.description);
                 // 避免從快取獲得圖片 加入隨機網址參數
                 $("#imageUrl_personal").css("background-image", `url('${data.imageUrl}?random=${Date.now()}')`);
