--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -207,7 +207,7 @@
             </div>
         </div>
         <div class="col-md-12 col-lg-6 half p-5 ftco-animate">
-            <h2 class="m-3">協尋資料</h2>
+            <h2 class="m-3">刊登協尋資料</h2>
             <div id="missingInput" class="row">
                 <div class="col-md-12">
                     <div class="col-md-12">
