--- a/src/main/resources/templates/forum.html
+++ b/src/main/resources/templates/forum.html
@@ -609,7 +609,7 @@
                 $("#articleUserName").text(userArticleData.name);
                 $("#articlePostDate").text(articleData.postDate);
                 $("#articleModifiedDate").text(articleData.modifiedDate);
-                $("#conTent").html(articleData.content);
+                $("#conTent").html(articleData.content.replaceAll("\n", "<br>"));
 
                 // 新增留言區賦予 articleId
                 $("#addMsgArea").attr("articleId", articleData.articleId);
@@ -765,7 +765,7 @@
 
         var type = $("#postType").val();
         var title = $("#postTitle").val();
-        var content = $("#postContent").val().replaceAll("\n", "<br>");
+        var content = $("#postContent").val()//.replaceAll("\n", "<br>");
 
         if (content == "") {
             alert('請填寫文章內容')
