資料顯示bug修正及加上註解

--- a/src/main/resources/templates/animal_public.html
+++ b/src/main/resources/templates/animal_public.html
@@ -349,7 +349,9 @@
         // 暫時停用捲動功能
         // 查詢結束後捲動視窗至篩選欄
         // $("html,body").animate({"scrollTop": $("#top").offset().top}, 500);
-        // $.getScript('js/main.js');
+
+        // 重新載入 Bootstrap 模板 js
+        $.getScript('js/main.js');
     }
 
     function getAnimalMissingInfo(gid) {//點擊詳細資料按紐
