換行邏輯修改

--- a/src/main/resources/templates/forum.html
+++ b/src/main/resources/templates/forum.html
@@ -802,7 +802,7 @@
 
         var type = $("#postType").val();
         var title = $("#postTitle").val();
-        var content = $("#postContent").val()//.replaceAll("\n", "<br>");
+        var content = $("#postContent").val();
 
         if (content == "") {
             alert('請填寫文章內容')
