修正交流天地-文字留言區捲動軸未確實隱藏

--- a/src/main/resources/templates/forum.html
+++ b/src/main/resources/templates/forum.html
@@ -170,6 +170,7 @@
             font-weight: 700;
             padding-top: 0;
             padding-bottom: 0;
+            border-width: 0px;
             display: block;
             line-height: 30px;
         }
